envoy.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:1010",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "access_log": [
              {
                "path": "/dev/stdout"
              }
            ],
            "codec_type": "auto",
            "stat_prefix": "ingress_http",
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "backend",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "nginx.service.dc1.consul"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/dev/stdout",
    "address": "tcp://0.0.0.0:8001"
  },
  "cluster_manager": {
    "clusters": [
      {
        "name": "nginx.service.dc1.consul",
        "connect_timeout_ms": 250,
        "type": "sds",
        "lb_type": "round_robin",
        "service_name": "nginx.service.dc1.consul"
      }
    ],
    "sds": {
      "cluster": {
        "name": "envoy_consul_sds",
        "type": "logical_dns",
        "connect_timeout_ms": 250,
        "lb_type": "round_robin",
        "hosts": [
          {"url": "tcp://envoy-consul-sds.service.dc1.consul:8080"}
        ]       
      },
      "refresh_delay_ms": 1000
    }
  }
}
